--- a/black.html
+++ b/black.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
     <style>
         body {
+            cursor: none;
             margin: 0;
             padding: 0;
             display: flex;
