--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
     <div id="content" class="container">
         <button onclick="toggleDarkMode()">Toggle Dark Mode</button>
         <p></p>
-        <a href="./clock">Clock</a>
-        <a href="./background-clock">Background Clock</a>
-        <a href="./screen-saver">Screen Saver</a>
+        <a href="./clock" target="_blank">Clock</a>
+        <a href="./background-clock" target="_blank">Background Clock</a>
+        <a href="./screen-saver" target="_blank">Screen Saver</a>
     </div>
     <script>
         function toggleDarkMode() {
