--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
         <a href="./clock" target="_blank">Clock</a>
         <a href="./background-clock" target="_blank">Background Clock</a>
         <a href="./screen-saver" target="_blank">Screen Saver</a>
+        <a href="./tab-clock" target="_blank">Tab Clock</a>
     </div>
     <script>
         function toggleDarkMode() {
