--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Clock</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
     <link rel="icon"
         href="https://raw.githubusercontent.com/microsoft/fluentui-emoji/refs/heads/main/assets/Deciduous%20tree/3D/deciduous_tree_3d.png">
@@ -101,7 +101,7 @@
     </div>
     <div class="box">
         <div class="button-container">
-            <button onclick="window.location.href='./clock'">CLock</button>
+            <button onclick="window.location.href='./clock'">Clock</button>
             <button onclick="window.location.href='./background-clock'">Background Clock</button>
             <button onclick="window.location.href='./screen-saver'">Screen Saver</button>
             <button onclick="window.location.href='./tab-clock'">Tab Clock</button>
