--- a/index.html
+++ b/index.html
@@ -89,6 +89,10 @@
             border-radius: 10px;
             cursor: pointer;
         }
+        
+        button:hover {
+            background-color: #6a0dad;
+        }
     </style>
 </head>
 
