--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
             content="width=device-content,
             initial-scale=1.0">
         <title>Clock</title>
-        <link rel="icon" type="image/png"
-            href="./Tree.png">
-            <link rel="icon" href="https://raw.githubusercontent.com/microsoft/fluentui-emoji/refs/heads/main/assets/Deciduous%20tree/3D/deciduous_tree_3d.png">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto" rel="stylesheet">
+        <link rel="icon" href="https://raw.githubusercontent.com/microsoft/fluentui-emoji/refs/heads/main/assets/Deciduous%20tree/3D/deciduous_tree_3d.png">
         <style>
             body {
                 cursor: none;
@@ -24,7 +23,7 @@
                 fixed;
                 background-size: cover;
                 color: #ffffff;
-                font-family: 'Roboto', sans-serif;
+                font-family: 'Roboto Light', sans-serif;
                 transition: background-image 1s ease;
             }
 
