--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <link rel="icon" href="https://raw.githubusercontent.com/microsoft/fluentui-emoji/refs/heads/main/assets/Deciduous%20tree/3D/deciduous_tree_3d.png">
         <style>
             body {
+                background-color: #121212;
                 cursor: none;
                 margin: 0;
                 padding: 0;
