--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 align-items: center;
                 height: 100vh;
                 background:
-                url('image.jpg') no-repeat center center
+                url('waves.png') no-repeat center center
                 fixed;
                 background-size: cover;
                 color: #ffffff;
